--- a/views/car-list.html
+++ b/views/car-list.html
@@ -14,13 +14,13 @@
                         <a class="navigation__link" href="/">Home</a>
                     </li>
                     <li>
-                        <a class="navigation_link" href="/car/add">Add new car</a>
+                        <a class="navigation__link" href="/car/add">Add new car</a>
                     </1i>
                     <li>
                         <a class="navigation__link" href="/car">Last added car</a>
                     </li>
                     <li>
-                        <a class="navigation_link" href="/car/list">Cars</a>
+                        <a class="navigation__link" href="/car/list">Cars</a>
                     </li>
                 </ul>
             </nav>
