--- a/views/car.html
+++ b/views/car.html
@@ -11,10 +11,10 @@
             <nav>
                 <ul class="navigation__list">
                     <li>
-                        <a class="navigation_link" href="/">Home</a>
+                        <a class="navigation__link" href="/">Home</a>
                     </li>
                     <li>
-                        <a class="navigation_link" href="/car/add">Add new car</a>
+                        <a class="navigation__link" href="/car/add">Add new car</a>
                     </li>
                     <li>
                         <a class="navigation__link" href="/car">Last added car</a>
