--- a/views/home.html
+++ b/views/home.html
@@ -11,13 +11,13 @@
             <nav>
                 <ul class="navigation__list">
                     <li>
-                        <a class="navigation_link" href="/">Home</a>
+                        <a class="navigation__link" href="/">Home</a>
                     </li>
                     <li>
                         <a class="navigation__link" href="/car/add">Add new car</a>
                     </li>
                     <li>
-                        <a class="navigation_link" href="/car">Last added car</a>
+                        <a class="navigation__link" href="/car">Last added car</a>
                     </li>
                     <li>
                         <a class="navigation__link" href="/car/list">Cars</a>
